# context-bro

./: README.md  __init__.py  install.sh  plugin.yaml  pyproject.toml
context_bro/: __init__.py  adapters.py  cli.py  core.py  plugin.py  render.py
skills/context-inspect/: SKILL.md
tests/: test_core.py  test_plugin.py  test_render.py
