[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-bro"
version = "0.1.0"
description = "Hermes context inspector plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
context-bro = "context_bro.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["context_bro*"]

